--- a/compose-tools.yaml
+++ b/compose-tools.yaml
@@ -5,5 +5,5 @@ services:
     environment:
       - OPENAI_API_KEY
     volumes:
-      - ./src:/app
+      - ${TARGET_DIR}:/app
     working_dir: /app
