[Add] `SERPAPI_API_KEY` env

--- a/compose-tools.yaml
+++ b/compose-tools.yaml
@@ -4,6 +4,7 @@ services:
     build: .
     environment:
       - OPENAI_API_KEY
+      - SERPAPI_API_KEY
     volumes:
       - ${TARGET_DIR}:/app
     working_dir: /app
