[Fix] add `pull-request: write` permission to ci

--- a/.github/workflows/prompt-evaluation.yaml
+++ b/.github/workflows/prompt-evaluation.yaml
@@ -12,6 +12,8 @@ env:
 jobs:
   evaluate:
     runs-on: ubuntu-latest
+    permissions:
+      pull-requests: write
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
