--- a/.github/workflows/prompt-evaluation.yaml
+++ b/.github/workflows/prompt-evaluation.yaml
@@ -13,6 +13,7 @@ jobs:
   evaluate:
     runs-on: ubuntu-latest
     permissions:
+      contents: read
       pull-requests: write
     steps:
       - name: Checkout code
