--- a/.github/workflows/prompt-evaluation.yaml
+++ b/.github/workflows/prompt-evaluation.yaml
@@ -16,9 +16,6 @@ jobs:
       contents: read
       pull-requests: write
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
       - name: Cache promptfoo data
         id: cache
         uses: actions/cache@v4
@@ -28,36 +25,11 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-promptfoo-
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
-
-      - name: Set up promptfoo
-        run: npm install -g promptfoo
-
       - name: Run promptfoo evaluation
-        id: eval
-        env:
-          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-          PROMPTFOO_CACHE_PATH: ~/.cache/promptfoo
-        run: |
-          promptfoo eval -o output.json --share
-          echo "OUTPUT_JSON_PATH=$GITHUB_WORKSPACE/${{ env.TARGET_DIR }}/output.json" >> $GITHUB_ENV
-        working-directory: ./${{ env.TARGET_DIR }}
-
-      - name: Comment PR
-        if: always()
-        uses: actions/github-script@v7
+        uses: promptfoo/promptfoo-action@v1
         with:
+          openai-api-key: ${{ secrets.OPENAI_API_KEY }}
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          script: |
-            const fs = require('fs');
-            const output = JSON.parse(fs.readFileSync(process.env.OUTPUT_JSON_PATH, 'utf8'));
-            const body = `⚠️ LLM prompt was modified.\n\n| Success | Failure |\n|---------|---------|\n| ${output.results.stats.successes}      | ${output.results.stats.failures}       |\n\n**» [View eval results](${output.shareableUrl}) «**`;
-            github.rest.issues.createComment({
-              issue_number: context.issue.number,
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              body: body
-            });
+          prompts: '${{ env.TARGET_DIR }}/**/*.json'
+          config: '${{ env.TARGET_DIR }}/promptfooconfig.yaml'
+          cache-path: ~/.cache/promptfoo
